# netcrab

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: export.rs  lib.rs  net.rs  net_creator.rs  petri_net.rs
src/export/: dot.rs  lola.rs  pnml.rs  test_export_examples.rs  test_utils.rs
src/net/: edge.rs  net_iter.rs  net_tests.rs  node.rs  node_ref.rs  place.rs  token.rs  transition.rs
src/net/net_iter/: net_iter_tests.rs
src/net/node/: connectable.rs  place_tests.rs  postset_connectable.rs  transition_tests.rs
src/net/place/: place_tests.rs
src/net/token/: token_tests.rs
src/petri_net/: net_iter.rs  node.rs  node_ref.rs  place.rs  place_ref.rs  preset_connectable.rs  transition.rs  transition_ref.rs
src/petri_net/node/: postset_connectable.rs  preset_connectable.rs
tests/: test_rust_to_petri.rs
