[package]
name = "netcrab"
version = "0.1.0"
description = "A tool suite for creating, visualizing and analyzing Petri nets"
repository = "https://github.com/hlisdero/netcrab/"
homepage = "https://github.com/hlisdero/netcrab/"
authors = ["Horacio Lisdero Scaffino <hlisdero@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["petri-net", "dot", "pnml"]
categories = ["data-structures"]
edition = "2021"

[dependencies]
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
xml-rs = "0.8.10"
