[package]
name = "netcrab"
version = "1.0.0"
description = "A simple library for creating and exporting Petri nets"
repository = "https://github.com/hlisdero/netcrab/"
homepage = "https://github.com/hlisdero/netcrab/"
authors = ["Horacio Lisdero Scaffino <hlisdero@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["petri-net", "dot", "pnml"]
categories = ["data-structures"]
edition = "2021"
exclude = [
    ".github/**",
    "images/*",
]

[dependencies]
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics"] }
xml-rs = "0.8.13"
