[package]
name = "netcrab"
version = "1.0.1"
description = "A simple library for creating and exporting Petri nets"
repository = "https://github.com/hlisdero/netcrab/"
homepage = "https://github.com/hlisdero/netcrab/"
authors = ["Horacio Lisdero Scaffino <hlisdero@users.noreply.github.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["petri-net", "dot", "pnml"]
categories = ["data-structures"]
edition = "2024"
exclude = [".github/**", "images/*"]

[dependencies]
uuid = { version = "1.21.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
xml-rs = "1.0.0"
